fix scrollbard color

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,9 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 4px;
     background-color: #F5F5F5;
+    color: #497577;
 }
 
 ::-webkit-scrollbar-track {
@@ -28,7 +29,7 @@ body {
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #555;
+    background-color: #497577;
 }
 
 a:-webkit-any-link:focus {
